# Property-Sales-Prediction

./: .gitignore  .pre-commit-config.yaml  README.md  custom_transformers.py  eda.ipynb  features.ipynb  main.py  pyproject.toml  requirements.txt
lib/src/sale_prediction/: custom_transformers.py  data_downloader.py
notebooks/: eda.ipynb  features.ipynb
