[tool.poetry]
name = "Sales Property Prediction"
version = "0.1.0"
description = ""
authors = ["Felix Rauterberg <felix-rauterberg@gmx.de>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <=3.13"
pandas = "*"
jupyter = "*"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
