[tool.poetry]
name = "Sales Property Prediction"
version = "0.1.0"
description = ""
authors = ["Felix Rauterberg <felix-rauterberg@gmx.de>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
pandas = "*"
pyarrow = "*"
jupyter = "*"
plotly = "*"
matplotlib = "<3.10"
seaborn = "*"
geopy = "*"
numpy = ">=2 <2.2"
scikit-learn = "*"
icecream = "^2.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
flake8 = "*"
bandit = "*"
isort = "*"
pyupgrade = "*"
yesqa = "*"
pycln = "*"
